--- a/OrderSummary.css
+++ b/OrderSummary.css
@@ -11,14 +11,17 @@ body{
     background-size: contain;
     position: relative;
     font-size: 16px;
+    
 }
 
 .container{
+   
+    margin-top: 20px;
     position: absolute;
     left: 50%;
-    top: 50%;
+    top: 40%;
     transform: translate(-50%, -50%);
-    max-width: 380px;
+    max-width: 360px;
     max-height: 550px;
     background-color: whitesmoke;
     border-radius: 20px;
