--- a/OrderSummary.css
+++ b/OrderSummary.css
@@ -28,6 +28,13 @@ body{
     overflow: hidden;
 }
 
+.main-img{
+    width: 100%;
+    height: 32%;
+    border-radius: 20px 20px 0 0;
+    background-size: cover;
+}
+
 .text-content{
     padding: 7%;
     text-align: center;
