--- a/OrderSummary.css
+++ b/OrderSummary.css
@@ -35,7 +35,8 @@ p{
 }
 
 .main-img{
-    border-radius: 15px;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
     max-width: 100%;
     max-height: 32%;
 }
@@ -53,7 +54,7 @@ p{
 
 .plan-box{
     background-color: rgba(203, 234, 248, 0.669) ;
-    padding:20px;
+    padding:25px;
     border-radius: 20px;
 }
 
@@ -69,8 +70,8 @@ p{
 }
 
 .price-info img{
-    width:40px;
-    height: 40px;
+    width:35px;
+    height: 35px;
 }
 
 .title{
@@ -90,19 +91,22 @@ p{
 
 .annual{
     margin: 3px 0;
-    margin-left: 16px;
-    color: rgb(34, 34, 100);
+    margin-left: 12px;
+    color: rgb(46, 46, 97);
     font-weight: 700;
+    font-size: 14px;
 }
 
 .price{
     margin: 3px 0;
     margin-left: 16px;
+    font-size: 14px;
 }
 
 .change-btn{
     color: rgb(44, 44, 182);
     font-weight: 700;
+    font-size: 14px;
 }
 
 .change-btn:hover{
@@ -146,12 +150,14 @@ p{
 /* Make the page responsive with media query */
 
 @media screen and (max-width:450px) {
+
+
     .card-info{
-        padding: 24px;
+        padding: 20px;
     }
 
     .annual .price .change-btn{
-        font-size:14px;
+        font-size:11px;
     }
 
     .pattern{
@@ -162,6 +168,9 @@ p{
 
 
 @media screen and(max-width:350px){
+    .container{
+        max-width: 87%;
+    }
     .price-info{
         flex-direction: column;
     }
